Bug 160901 - Math rendering is wrong if Skia disabled
Summary: Math rendering is wrong if Skia disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-05-02 07:30 UTC by Regina Henschel
Modified: 2024-05-17 15:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Rendering compare with and without Skia (21.79 KB, image/png)
2024-05-02 07:30 UTC, Regina Henschel
Details
math formula with widevec and scalable brackets (6.44 KB, application/vnd.oasis.opendocument.formula)
2024-05-02 07:32 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-05-02 07:30:59 UTC
Created attachment 193935 [details]
Rendering compare with and without Skia

Rendering of Math is wrong, if Skia is disabled. In the example:
(1) widevec is a normal vec
(2) scaling brackets are wrong

The attached file contains the screenshots.
Original file will follow.
Comment 1 Regina Henschel 2024-05-02 07:32:07 UTC
Created attachment 193936 [details]
math formula with widevec and scalable brackets
Comment 2 Mike Kaganski 2024-05-02 08:22:21 UTC
Regression after commit 8557ea84c9336ba8061246f1f46ddb6e02f413a1 (Exclude getHScale from DirectWrite font rendering, 2024-04-08).
Comment 3 Mike Kaganski 2024-05-02 09:26:14 UTC
https://gerrit.libreoffice.org/c/core/+/167004
Comment 4 Commit Notification 2024-05-03 01:52:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f2d56d486da2006e24444cfa6f2f63700a14fae

tdf#160901: partially revert 8557ea84c9336ba8061246f1f46ddb6e02f413a1

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.