tdf#160901: partially revert 8557ea84c9336ba8061246f1f46ddb6e02f413a1

It turns out, that the horizontal scale is needed in the applied transform.

Change-Id: Ic07e015f0ddeee3d66653b683d83435d04b9ab81
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167004
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>